# DMD2

./: pyproject.toml  test_prompts.txt
fsdp_configs/: fsdp_4gpu.yaml
main/zimage/: train_zimage.py  zimage_guidance.py  zimage_unified_model.py
scripts/: train_zimage_fsdp_4gpu.sh
