[project]
name = "DMD2"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch~=2.9.0",
    "diffusers==0.37.1",
    "transformers==4.57.1",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "ftfy",
    "tensorboard",
    "Jinja2",
    "peft>=0.11.1",
    "sentencepiece",
    "torchvision",
    "datasets",
    "bitsandbytes",
    "wandb>=0.26.0",
    "pip>=26.0.1",
    "matplotlib>=3.10.8",
    "imageio>=2.37.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git", rev = "71a6fd9f0df04d3764dfa999268a05d87903a85a" }

